initial work for work section

--- a/app/pug/work.pug
+++ b/app/pug/work.pug
@@ -1,3 +1,10 @@
 mixin work
   .work
-  
+    .work-title.fade-in Work
+    .work-content.fade-in
+      .work-content-subtitle
+        | Take a look at some of our tastiest code concoctions. We have a
+        | different flavor for everyone. All cruelty-free*.
+        .work-content-subtitle-comment *Yet completely packed with gluten!
+      .work-content-arrow
+        span.work-content-arrow-circle &gt;
