--- a/app/sass/_work.sass
+++ b/app/sass/_work.sass
@@ -1,7 +1,8 @@
 .work
   padding: 6vw 6vw 10vw 6vw
-  background: $cod-gray
-  color: $white
+  background: url("https://images.unsplash.com/photo-1422255198496-21531f12a6e8?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=39fbd082862a11e6b6a3dac814db178b") no-repeat center center
+  background-size: cover
+  color: $cod-gray
 
   &-title
     font-size: 1.4em
@@ -30,7 +31,7 @@
       padding-top: 5vw
 
       &-circle
-        border: 2px solid $white
+        border: 2px solid $cod-gray
         border-radius: 50%
         padding: 0 1.5vw 0 1.5vw
 
@@ -52,7 +53,7 @@
       font-size: 7vw
 
       &-circle
-        border: 2px solid $white
+        border: 2px solid $cod-gray
         border-radius: 50%
         padding: 0 3vw 0 3vw
 
