cleaned up a bit - changed background image on work - dialed in some font-sizes and animations overall

--- a/app/sass/_about.sass
+++ b/app/sass/_about.sass
@@ -33,14 +33,12 @@
         border: 2px solid $white
         border-radius: 50%
         padding: 0 1.5vw 0 1.5vw
+        transition: all 175ms ease-in-out
 
       &-circle:hover
         background: $white
         color: $cod-gray
         cursor: pointer
-
-      .ion-android-arrow-dropright-circle
-        color: $white
 
 @media (max-width: $medium-devices)
   .about-content
