--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -8,6 +8,7 @@ $main-color         : rgba(224, 255, 255, .48)
 // $complementary-color:
 $cod-gray     : #111
 $white        : #fff
+$zumthor      : rgb(200,218,222)
 
 
 // =============
