restyled intro - built out footer - slight font adjustments all over

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -3,8 +3,10 @@ include ./nav
 include ./intro
 include ./about
 include ./work
+include ./footer
 
 block content
   +intro
   +about
   +work
+  +footer
