--- a/app/pug/intro.pug
+++ b/app/pug/intro.pug
@@ -20,7 +20,7 @@ mixin intro
     });
 
   .intro.page-fade-in.one
-    .intro-title.center.page-fade-in.two pots&amp;pans.web
-    .intro-subtitle.center.page-fade-in.two
-      | The internet can be a big, scary place. Let us help you find your
-      .into-subtitle-rotatingPhrase yellow brick road
+    .intro-title.page-fade-in.two pots&amp;pans.web
+    .intro-subtitle.page-fade-in.two
+      | The internet can be a big, scary place. Let us help you find your&nbsp;
+      span.into-subtitle-rotatingPhrase yellow brick road.
