--- a/app/sass/_about.sass
+++ b/app/sass/_about.sass
@@ -1,7 +1,7 @@
 .about
   padding: 6vw 6vw 10vw 6vw
   background: $cod-gray
-  color: $white
+  color: $whisper
 
   &-title
     font-size: 1.4em
@@ -18,7 +18,7 @@
       width: 60%
 
       &-comment
-        font-family: $open-sans
+        font-family: $karla
         font-size: 1.4vw
         font-weight: 300
         padding-top: 7vw
@@ -30,13 +30,13 @@
       padding-top: 5vw
 
       &-circle
-        border: 2px solid $white
+        border: 2px solid $whisper
         border-radius: 50%
-        padding: 0 1.5vw 0 1.5vw
+        padding: 0 1.2vw 0 1.2vw
         transition: all 175ms ease-in-out
 
       &-circle:hover
-        background: $white
+        background: $whisper
         color: $cod-gray
         cursor: pointer
 
@@ -50,9 +50,7 @@
       font-size: 7vw
 
       &-circle
-        border: 2px solid $white
-        border-radius: 50%
-        padding: 0 3vw 0 3vw
+        padding: 0 2.6vw 0 2.6vw
 
     &-subtitle
       font-size: 7vw
