--- a/app/sass/_intro.sass
+++ b/app/sass/_intro.sass
@@ -1,16 +1,16 @@
 .intro
-  padding: 7vw 12vw 13vw 12vw
+  padding: 7vw 7vw 13vw 7vw
   background: $white
 
   &-title
-    font-family: $open-sans
+    font-family: $karla
     font-size: 1.9em
-    font-weight: 700
-    padding-bottom: 4vw
+    font-weight: 400
+    padding-bottom: 8vw
 
   &-subtitle
     font-family: $playfair-display
-    font-size: 8vw
+    font-size: 7vw
     font-weight: 900
     letter-spacing: .05em
     line-height: 8vw
