--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -7,6 +7,7 @@ $main-color         : rgba(224, 255, 255, .48)
 // $secondary-color    :
 // $complementary-color:
 $cod-gray     : #111
+$whisper      : #e4e4e4
 $white        : #fff
 $zumthor      : rgb(200,218,222)
 
@@ -15,11 +16,13 @@ $zumthor      : rgb(200,218,222)
 //      Font
 //      :Change to your font
 // =============
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700')
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900')
+@import url('https://fonts.googleapis.com/css?family=Karla:400,700')
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700')
 
-$open-sans: 'Open Sans Condensed', sans-serif
 $playfair-display: 'Playfair Display', serif
+$karla: 'Karla', sans-serif
+$open-sans: 'Open Sans Condensed', sans-serif
 
 
 
