--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,10 +7,11 @@
 @import "_intro"
 @import "_about"
 @import "_work"
+@import "_footer"
 
 
 html
-  font-family: $open-sans
+  font-family: $karla
   background: $cod-gray
 
 h1
