--- a/app/sass/_reset.sass
+++ b/app/sass/_reset.sass
@@ -8,6 +8,7 @@ blockquote, img, label, p,
 h1, h2, h3, h4, h5, h6,
 pre, ul, ol, li, dl, dt, dd,
 form, a, fieldset, input, th, td
+  font-family: inherit
   margin : 0
   padding: 0
   border : 0
