--- a/app/sass/_work.sass
+++ b/app/sass/_work.sass
@@ -19,7 +19,7 @@
       width: 60%
 
       &-comment
-        font-family: $open-sans
+        font-family: $karla
         font-size: 1.4vw
         font-weight: 300
         padding-top: 7vw
@@ -33,7 +33,7 @@
       &-circle
         border: 2px solid $white
         border-radius: 50%
-        padding: 0 1.5vw 0 1.5vw
+        padding: 0 1.2vw 0 1.2vw
         transition: all 175ms ease-in-out
 
       &-circle:hover
@@ -52,9 +52,7 @@
       font-size: 7vw
 
       &-circle
-        border: 2px solid $cod-gray
-        border-radius: 50%
-        padding: 0 3vw 0 3vw
+        padding: 0 2.6vw 0 2.6vw
 
     &-subtitle
       font-size: 7vw
