subfooter initial build

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -4,9 +4,11 @@ include ./intro
 include ./about
 include ./work
 include ./footer
+include ./subfooter
 
 block content
   +intro
   +about
   +work
   +footer
+  +subfooter
