--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -7,9 +7,8 @@
   font-size: 1em
   letter-spacing: .03em
   line-height: 1.8em
-  padding-bottom: 3vw
-  padding-left: 7vw
-  padding-right: 7vw
+  padding: 4vw 7vw 7vw 7vw
+  background: $cod-gray
 
   &-triangle
     width: 25%
