--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -8,11 +8,12 @@
 @import "_about"
 @import "_work"
 @import "_footer"
+@import "_subfooter"
 
 
 html
   font-family: $karla
-  background: $cod-gray
+  background: $black
 
 h1
   font-size: 4em
