--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -6,6 +6,7 @@
 $main-color         : rgba(224, 255, 255, .48)
 // $secondary-color    :
 // $complementary-color:
+$black        : #000
 $cod-gray     : #111
 $whisper      : #e4e4e4
 $white        : #fff
