created arrow mixins and styles

--- a/app/pug/about.pug
+++ b/app/pug/about.pug
@@ -1,9 +1,8 @@
 mixin about
-  .about
-    .about-title.fade-in About
-    .about-content.fade-in
-      .about-content-subtitle
+  .section.dark
+    .section-title.fade-in About
+    .section-content.fade-in
+      .section-content-subtitle
         | We focus on building better business. Living code for living people.
-        .about-content-subtitle-comment (Strict "No Zombie" Policy)
-      .about-content-arrow
-        span.about-content-arrow-circle &gt;
+        .section-content-subtitle-comment (Strict "No Zombie" Policy)
+      +arrow('circle-dark', 'https://www.google.com')
