--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,14 +1,13 @@
 @import "_reset"
 @import "_variables"
 @import "_helpers"
-
 @import "_page-fade-in"
 @import "_nav"
 @import "_intro"
-@import "_about"
-@import "_work"
 @import "_footer"
 @import "_subfooter"
+@import "_section"
+@import "mixins/_arrow"
 
 
 html
