--- a/app/pug/footer.pug
+++ b/app/pug/footer.pug
@@ -1,19 +1,19 @@
 mixin footer
   .footer
-    .footer-triangle
+    .footer-section
       img(src='img/potsnpanstriangle.png')
-    .footer-webContact
-      .footer-webContact-title Let's Talk
+    .footer-section
+      .footer-section-title Let's Talk
       | Remy Brommer
       br
       | 614-981-2686
-    .footer-filmContact
-      .footer-filmContact-title Film Division
+    .footer-section
+      .footer-section-title Film Division
       | Daniel Zabludovsky
       br
       | 614-406-5710
-    .footer-social
-      .footer-social-title Socially Acceptable
+    .footer-section
+      .footer-section-title Socially Acceptable
       | Instagram
       br
       | Twitter
