adjusted gulpfile to collect additional pages, updated links, initial work and about gulps created

--- a/app/templates/mixins/subfooter.pug
+++ b/app/templates/mixins/subfooter.pug
@@ -1,5 +1,8 @@
 mixin subfooter
   .subfooter
-    .subfooter-aboutLink About
-    .subfooter-workLink Work
-    .subfooter-contactLink Contact
+    .subfooter-link
+      +link('./about.html', 'link', '_top', 'About')
+    .subfooter-link
+      +link('./work.html', 'link', '_top', 'Work')
+    .subfooter-link
+      +link('./contact.html', 'link', '_top', 'Contact')
