--- a/app/styles/_reset.sass
+++ b/app/styles/_reset.sass
@@ -24,8 +24,5 @@ h1, h2, h3, h4, h5, h6
   margin   : 0 15px
 
 a
-  color          : black
+  color          : $whisper
   text-decoration: none
-
-a:hover
-  text-decoration: underline
