--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,10 +1,10 @@
-@import "_reset"
 @import "_variables"
+@import "_reset"
 @import "_helpers"
 @import "_page-fade-in"
 @import "_intro"
-@import "_footer"
-@import "_subfooter"
+@import "mixins/_footer"
+@import "mixins/_subfooter"
 @import "_section"
 @import "mixins/_arrow"
 
