--- a/app/templates/base.pug
+++ b/app/templates/base.pug
@@ -40,6 +40,7 @@ body
   <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
+  include ./mixins/link
   include ./mixins/footer
   include ./mixins/subfooter
 
