--- a/app/templates/home/_work.pug
+++ b/app/templates/home/_work.pug
@@ -5,4 +5,5 @@
       | Take a look at some of our tastiest code concoctions. We have a
       | different flavor for everyone. All cruelty-free*.
       .section-content-subtitle-comment *Yet completely packed with gluten!
-    +arrow('circle-light', 'http://www.google.com')
+    +link('./work.html', 'link', '_top')
+      +arrow('circle-light', 'http://www.google.com')
