--- a/app/templates/layouts/base.pug
+++ b/app/templates/layouts/base.pug
@@ -40,9 +40,9 @@ body
   <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  include ./mixins/link
-  include ./mixins/footer
-  include ./mixins/subfooter
+  include ../mixins/link
+  include ../mixins/footer
+  include ../mixins/subfooter
 
   block content
 
