added section links on index - adjusted arrow.pug to include link element

--- a/app/templates/home/_about.pug
+++ b/app/templates/home/_about.pug
@@ -4,4 +4,4 @@
     .section-content-subtitle
       | We focus on building better business. Living code for living people.
       .section-content-subtitle-comment (Strict "No Zombie" Policy)
-    +arrow('circle-dark', 'https://www.google.com')
+    +arrow('/about.html', 'circle-dark', '')
