--- a/app/templates/home/_about.pug
+++ b/app/templates/home/_about.pug
@@ -1,7 +1,8 @@
 .section.dark
   .section-title.fade-in About
   .section-content.fade-in
-    .section-content-subtitle
+    .section-content-left
       | We focus on building better business. Living code for living people.
-      .section-content-subtitle-comment (Strict "No Zombie" Policy)
-    +arrow('/about.html', 'circle-dark', '')
+      .section-content-left-comment (Strict "No Zombie" Policy)
+    .section-content-right
+      +circle-button('/about', 'circle-dark', '')
