--- a/app/templates/mixins/subfooter.pug
+++ b/app/templates/mixins/subfooter.pug
@@ -1,8 +1,8 @@
 mixin subfooter
   .subfooter
     .subfooter-link
-      +link('./about.html', 'link', '_top', 'About')
+      +link('/about', 'link', '_top', 'About')
     .subfooter-link
-      +link('./work.html', 'link', '_top', 'Work')
+      +link('/work', 'link', '_top', 'Work')
     .subfooter-link
-      +link('./contact.html', 'link', '_top', 'Contact')
+      +link('/contact', 'link', '_top', 'Contact')
