--- a/app/templates/home/_work.pug
+++ b/app/templates/home/_work.pug
@@ -1,8 +1,9 @@
 .section.background-image.work
   .section-title.fade-in Work
   .section-content.fade-in
-    .section-content-subtitle
+    .section-content-left
       | Take a look at some of our tastiest code concoctions. We have a
       | different flavor for everyone. All cruelty-free*.
-      .section-content-subtitle-comment *Yet completely packed with gluten!
-    +arrow('/work.html', 'circle-light', '')
+      .section-content-left-comment *Yet completely packed with gluten!
+    .section-content-right
+      +circle-button('/work', 'circle-light', '')
