restyled some index elements

--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -9,7 +9,7 @@
     color: $white
 
     &.work
-      background: url('../img/work-section-background.jpeg') no-repeat center center
+      background: url('../img/spaceback.jpeg') no-repeat center center
       background-size: cover
 
   &-title
@@ -18,6 +18,7 @@
   &-content
     display: flex
     justify-content: stretch
+    padding-top: 5vw
 
     &-left
       font-family: $playfair-display
