--- a/app/templates/home/_intro.pug
+++ b/app/templates/home/_intro.pug
@@ -1,7 +1,7 @@
+a(href='/work')
+  img.intro-corner-image(src='img/spacework.png')
 .intro.page-fade-in.one
-  a(href='/work')
-    img.intro-corner-image.page-fade-in.two(src='img/spacework.png')
   .intro-title.page-fade-in.two pots&amp;pans.web
   .intro-subtitle.page-fade-in.two
     | The internet can be a big, scary place. Let us help you find your&nbsp;
-    span.into-subtitle-rotatingPhrase yellow brick road.
+    span.intro-subtitle-rotatingPhrase yellow brick road.
