--- a/app/templates/home/_work.pug
+++ b/app/templates/home/_work.pug
@@ -2,8 +2,10 @@
   .section-title.fade-in Work
   .section-content.fade-in
     .section-content-left
-      | Take a look at some of our tastiest code concoctions. We have a
-      | different flavor for everyone. All cruelty-free*.
-      .section-content-left-comment *Yet completely packed with gluten!
+      | In the vast expanses of the internet it's easy to feel small and
+      | unnoticed. Meet some of the people we've helped shine a whole lot
+      | brighter.
+      .section-content-left-comment
+        | Turning clients into friends since the dawn of time.
     .section-content-right
-      +circle-button('/work', 'circle-light', '')
+      +circle-button('/work', 'circle-dark', '')
