started work page

--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -20,6 +20,15 @@
     justify-content: stretch
     padding-top: 5vw
 
+    &-center
+      color: $whisper
+      font-family: $playfair-display
+      font-size: 12vw
+      font-weight: 700
+      line-height: 7.5vw
+      text-align: center
+      width: 100%
+
     &-left
       font-family: $playfair-display
       font-size: 3.6vw
