added hover styles for work page in javascript

--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -1,9 +1,26 @@
 .section
   color: $whisper
   padding: 6vw 6vw 10vw
+  transition: opacity 500ms ease-in-out
 
   &.dark
     background: $cod-gray
+
+  &.bliss-in-a-bottle
+    background: url('../img/blissinabottle-clients-background.jpg') no-repeat center center
+    background-size: cover
+
+  &.samson-mens-emporium
+    background: url('../img/samsonmensemporium-clients-background.jpg') no-repeat center center
+    background-size: cover
+
+  &.prolong-tool
+    background: url('../img/prolongtool-clients-background.jpg') no-repeat center center
+    background-size: cover
+
+  &.musca-domestica
+    background: url('../img/muscadomestica-clients-background.jpeg') no-repeat center center
+    background-size: cover
 
   &.background-image
     color: $white
@@ -23,9 +40,8 @@
     &-center
       color: $whisper
       font-family: $playfair-display
-      font-size: 12vw
+      font-size: 4vw
       font-weight: 700
-      line-height: 7.5vw
       text-align: center
       width: 100%
 
