--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -6,6 +6,13 @@
   &.dark
     background: $cod-gray
 
+  &.background-image
+    color: $white
+
+    &.work
+      background: url('../img/spaceback.jpeg') no-repeat center center
+      background-size: cover
+
   &.bliss-in-a-bottle
     background: url('../img/blissinabottle-clients-background.jpg') no-repeat center center
     background-size: cover
@@ -22,12 +29,9 @@
     background: url('../img/muscadomestica-clients-background.jpeg') no-repeat center center
     background-size: cover
 
-  &.background-image
-    color: $white
-
-    &.work
-      background: url('../img/spaceback.jpeg') no-repeat center center
-      background-size: cover
+  &.boobs-that-are-cool
+    background: url('../img/2mfzssh.jpg') no-repeat center center
+    background-size: cover
 
   &-title
     font-size: 1.4em
@@ -40,8 +44,9 @@
     &-center
       color: $whisper
       font-family: $playfair-display
-      font-size: 4vw
+      font-size: 5vw
       font-weight: 700
+      line-height: 5vw
       text-align: center
       width: 100%
 
