--- a/app/templates/work/_portfolio.pug
+++ b/app/templates/work/_portfolio.pug
@@ -1,8 +1,17 @@
-- var clients = ['Bliss in a Bottle', "Samson Men's Emporium", 'Prolong Tool', 'Musca Domestica']
-.section.dark.page-fade-in.one
+-
+  clients = ['Bliss in a Bottle', "Samson Men's Emporium", 'Prolong Tool',
+             'Musca Domestica']
+
+.section.background-image.work.page-fade-in.one
   .intro-title.center
     +link('/index', '', '_top', 'pots&pans.web')
   .section-content-center
     ul.client-list
       each client in clients
-        li.client-list-item #{client}
+        li.client-list-item
+          +link(
+            client.replace(/\s+/g, '-').replace(/'/g, '').toLowerCase(),
+            '',
+            '',
+            client
+          )
