added connect section to work page

--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -3,6 +3,8 @@
   padding: 6vw 6vw 10vw
   transition: opacity 500ms ease-in-out
 
+  // start background styles
+
   &.dark
     background: $cod-gray
 
@@ -29,12 +31,14 @@
     background: url('../img/muscadomestica-clients-background.jpeg') no-repeat center center
     background-size: cover
 
-  &.boobs-that-are-cool
-    background: url('../img/2mfzssh.jpg') no-repeat center center
-    background-size: cover
+  &.black
+    background: $black
+
+  // ^-- end background styles
 
   &-title
     font-size: 1.4em
+    width: 60%
 
   &-content
     display: flex
