--- a/app/templates/work.pug
+++ b/app/templates/work.pug
@@ -1,4 +1,5 @@
 extends ./layouts/base.pug
 
 block content
-  include ./work/_portfolio.pug
+  include ./work/_clients.pug
+  include ./work/_connect.pug
