started bliss in a bottle page and associated sass

--- a/app/styles/intro.sass
+++ b/app/styles/intro.sass
@@ -8,12 +8,29 @@
     font-weight: 400
     padding-bottom: 8vw
 
+    &-hero
+      color: $white
+      font-family: $karla
+      font-size: 1.4em
+      font-weight: 400
+      padding-bottom: 10vw
+
   &-subtitle
     font-family: $playfair-display
     font-size: 7vw
     font-weight: 900
     letter-spacing: .05em
     line-height: 8vw
+
+    &-hero
+      color: $white
+      font-family: $playfair-display
+      font-size: 4vw
+      font-weight: 900
+      letter-spacing: .08em
+      line-height: 8vw
+      padding-bottom: 5vw
+
 
   &-corner-image
     position: absolute
