--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -19,6 +19,10 @@
     background: url('../img/blissinabottle-clients-background.jpg') no-repeat center center
     background-size: cover
 
+    &-projects
+      background: url('../img/blissnewback.jpeg') no-repeat center center
+      background-size: cover
+
   &.samson-mens-emporium
     background: url('../img/samsonmensemporium-clients-background.jpg') no-repeat center center
     background-size: cover
@@ -52,7 +56,6 @@
       font-weight: 700
       line-height: 5vw
       text-align: center
-      width: 100%
 
     &-left
       font-family: $playfair-display
