fixed mixin - no error - styles working, still need to add js mixin adjustments

--- a/app/templates/layouts/base.pug
+++ b/app/templates/layouts/base.pug
@@ -45,6 +45,7 @@ body
   include ../mixins/footer
   include ../mixins/link
   include ../mixins/subfooter
+  include ../mixins/hero
 
   block content
 
