--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -7,6 +7,7 @@
 @import 'mixins/subfooter'
 @import 'section'
 @import 'mixins/circle-button'
+@import 'mixins/hero'
 @import 'clients'
 @import 'study'
 
