--- a/app/styles/study.sass
+++ b/app/styles/study.sass
@@ -8,7 +8,8 @@
     font-family: $karla
     font-size: 1em
     line-height: 1.3em
-    padding: 0vw 10vw
+    padding-left: 10vw
+    padding-right: 10vw
 
   &-main
     font-family: $playfair-display
@@ -16,5 +17,6 @@
     font-weight: 700
     line-height: 3.5vw
 
-  & img
-    width: 80%
+    & img
+      padding-top: 17vw
+      width: 100%
