--- a/app/templates/bliss-in-a-bottle.pug
+++ b/app/templates/bliss-in-a-bottle.pug
@@ -1,5 +1,5 @@
 extends ./layouts/base.pug
 
 block content
-  include ./bliss-in-a-bottle/_hero.pug
+  +hero
   include ./bliss-in-a-bottle/_content.pug
