--- a/app/templates/bliss-in-a-bottle/_content.pug
+++ b/app/templates/bliss-in-a-bottle/_content.pug
@@ -3,5 +3,5 @@
     | Our goal was to bring this growing business not only into
     | the present, but a few steps
     i &nbsp;into the future.
-.study.fade-in
-  img(src='img/bliss-in-a-bottle-example.png')
+  .study-main.fade-in
+    img(src='img/bliss-in-a-bottle-example.png')
