finished hero mixin

--- a/app/templates/bliss-in-a-bottle.pug
+++ b/app/templates/bliss-in-a-bottle.pug
@@ -1,5 +1,5 @@
 extends ./layouts/base.pug
 
 block content
-  +hero
+  +hero('../img/blissnewback.jpeg', 'Delicious do-over')
   include ./bliss-in-a-bottle/_content.pug
