--- a/app/templates/layouts/base.pug
+++ b/app/templates/layouts/base.pug
@@ -43,9 +43,11 @@ body
 
   include ../mixins/circle-button
   include ../mixins/footer
-  include ../mixins/link
-  include ../mixins/subfooter
   include ../mixins/hero
+  include ../mixins/link
+  include ../mixins/study
+  include ../mixins/study-images
+  include ../mixins/subfooter
 
   block content
 
