epxanded on bliss study

--- a/app/styles/study.sass
+++ b/app/styles/study.sass
@@ -8,14 +8,17 @@
     font-family: $karla
     font-size: 1em
     line-height: 1.3em
-    padding-left: 10vw
-    padding-right: 10vw
+    padding-top: .8vw
 
   &-main
     font-family: $playfair-display
-    font-size: 3vw
+    font-size: 4vw
     font-weight: 700
-    line-height: 3.5vw
+    line-height: 4.5vw
+
+    &.second
+      font-size: 4vw
+      padding-top: 20vw
 
     & img
       padding-top: 17vw
