--- a/app/templates/bliss-in-a-bottle/_content.pug
+++ b/app/templates/bliss-in-a-bottle/_content.pug
@@ -5,3 +5,11 @@
     i &nbsp;into the future.
   .study-main.fade-in
     img(src='img/bliss-in-a-bottle-example.png')
+  .study-main.second.fade-in
+    | Bliss in a Bottle already had a functioning website...
+  .study-aside.fade-in
+    | Functioning is the key word. It wasn't responsive for mobile browsers,
+    | and the ecommerce system and styling was clunky and outdated. We had to
+    | learn about the brand and become acquainted with their style in order
+    | to solve the problems they didn't even know they were having as well as
+    | the ones that were staring them in face.
